<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_report_problem_white_48dp"
        android:orderInCategory="1"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_report_problem_white_48dp"
        android:orderInCategory="1"
        android:title="@string/action_report"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_report_problem_white_48dp"
        android:orderInCategory="1"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
