<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/image"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="8dp">

                    <TextView
                        android:id="@+id/story_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/placeholder_title"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:id="@+id/story_creator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/written_by_username"
                        tools:ignore="RtlHardcoded,RtlSymmetry" />

                    <TextView
                        android:id="@+id/story_update_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/updated_time" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>